<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_filter">
        <item android:title="@string/menu_sticky_action_bar_filter_order_by" android:enabled="false"/>
            <item
                android:id="@+id/filter_date"
                android:title="@string/menu_sticky_action_bar_filter_date" />
            <item
                android:id="@+id/filter_name"
                android:title="@string/menu_sticky_action_bar_filter_name" />
            <item
                android:id="@+id/filter_size"
                android:title="@string/menu_sticky_action_bar_filter_size" />
            <item
                android:id="@+id/filter_reverse"
                android:title="@string/menu_sticky_action_bar_filter_reverse" />
    </group>
</menu>