<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rectangle"
    android:backgroundTint="@color/colorDialogBackground"
    android:padding="@dimen/_20sdp"
    tools:context=".views.fragments.DeleteItemDialogFragment">

    <TextView
        android:id="@+id/text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/dialog_add_item_privacy_message"
        android:textColor="@color/colorTextTertiary"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_message">

        <Button
            android:id="@+id/action_cancel"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:text="@string/dialog_cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_14ssp" />

        <Button
            android:id="@+id/action_move_to_privacy"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:text="@string/dialog_move_to_privacy"
            android:textAllCaps="false"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>