<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDetailDialogBackground"
    tools:context=".views.fragments.HeroPictureFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_ripple_circle"
            android:backgroundTint="@color/colorDetailDialogBackground"
            android:padding="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btn_save"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?selectableItemBackground"
            android:scaleType="fitCenter"
            android:text="@string/action_save"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <ImageView
        android:id="@+id/image_filter_preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@id/progress_process_filter"
        app:layout_constraintTop_toBottomOf="@+id/view_action_bar"
        tools:ignore="ContentDescription" />

    <ProgressBar
        android:id="@+id/progress_process_filter"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view_filter_style"/>

    <HorizontalScrollView
        android:id="@+id/view_filter_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_filter_preview"
        tools:layout_editor_absoluteX="47dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/original_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/original_image"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/filter_style_origin"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/grayscale_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/grayscale_image"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/filter_style_grayscale"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dark_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/dark_image"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/filter_style_dark"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/light_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/light_image"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/filter_style_light"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contrast_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/contrast_image"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/filter_style_contrast"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sepia_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/sepia_image"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/filter_style_sepia"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/snow_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/snow_image"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/filter_style_snow"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/saturation_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/saturation_image"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/filter_style_saturation"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/engrave_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/engrave_image"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/filter_style_engrave"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/blur_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/blur_image"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/filter_style_blurry"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/shadow_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/shadow_image"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/filter_style_shadow"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/flea_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/flea_image"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/filter_style_flea"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/hue_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/hue_image"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/filter_style_hue"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/black_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/black_image"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/filter_style_black"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimary" />

            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>