<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rectangle"
    android:backgroundTint="@color/colorDialogBackground"
    android:padding="@dimen/_15sdp"
    tools:context=".views.fragments.DeleteItemDialogFragment">

    <TextView
        android:id="@+id/text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/dialog_add_item_location_message"
        android:textColor="@color/colorTextTertiary"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_location_name"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:backgroundTint="@color/colorTextPrimary"
        android:inputType="textCapWords"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintTop_toBottomOf="@id/text_message"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_location_name">

        <Button
            android:id="@+id/action_cancel"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:text="@string/dialog_cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_14ssp" />

        <Button
            android:id="@+id/action_confirm"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:text="@string/dialog_confirm"
            android:textAllCaps="false"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>